tests/tooling/fixtures/native/execution/positive/switch_all_paths_return.objc3
module SwitchAllPathsReturn;

fn main() -> i32 {
  let value = 2;
  switch (value) {
    case 1:
      return 11;
    case 2:
      return 42;
    default:
      return 7;
  }
}