tests/tooling/fixtures/native/execution/negative/switch_call_condition_selected_conservative_reject.objc3
module SwitchCallConditionSelectedConservativeReject;

fn choose() -> i32 {
  return 1;
}

fn main() -> i32 {
  switch (choose()) {
    case 1:
      return 42;
    default:
      let fallback = 7;
  }
}
